# Platon

./: .gitignore  README.md  platon.html  style.css
core/: CMakeLists.txt  face.hpp  main.cpp  mesh.hpp  point.hpp
core/geometry/: face.hpp  mesh.hpp
doc/: roadmap  uml.txt
js/: core.js  platon-app.js~  render.js
